# keyinput-lib

./: CMakeLists.txt  LICENSE  README.md
cmake/: KeyInputLibConfig.cmake.in
examples/: ConsoleDeviceSelector.cpp  ConsoleDeviceSelector.hpp  main.cpp
include/: DeviceInfo.hpp  KeyInput.hpp  KeyboardDeviceFinder.hpp  KeyboardDeviceSelector.hpp
src/: KeyInput.cpp  KeyboardDeviceFinder.cpp  KeyboardDeviceSelector.cpp
